* Added support for `pg.queries.longest` in PostgreSQL versions prior to 9.2
* Added `pg.prepared_xacts_count` to return the number of transactions currently
  prepared for two phase commit
* Added `pg.prepared_xacts_ratio` to return the number of transactions currently
  prepared for two phase commit as a ratio of the maximum permitted prepared
  transaction count
* Added `--with-postgresql` switch to source configuration script
* Added `--with-zabbix` switch to source configuration script
* Fixed misreporting in `pg.queries.longest` when no queries were in progress
* Fixed build dependencies on Debian (thanks darkweaver87)
* Moved build scripts to a new repository (cavaliercoder/libzbxpgsql-build)

v0.2.1 14 Sep 2015

* Fixed connection leak in pg_version()
* Fixed query error in pg.index.rows key
* Removed noisy logging in pg.query.* keys

v0.2.0 16 Aug 2015

* Improved connections parameters on all item keys
* Add custom discovery rules via `pg.query.discovery`
* Fixed compatability issues with < v9.2
* Added support for OpenSUSE v13.2
* Added SQL injection prevention
* Added `pg.uptime` and `pg.starttime` keys
* Added `pg.modver` key to monitor the installed `libzbxpgsql` version
* Reduced required privileges for all keys to just `LOGIN`
* Fixed integer overflow issues on large objects
* Improved automated testing and packaging using Docker and `zabbix_agent_bench`

v0.1.3 17 Mar 2015

* Added configuration directive discovery

v0.1.2 20 Feb 2015

* Fixed module installation path
* Added git reference to library version info
* Added project and RPM build to Travis CI
* Improved detection of PostgreSQL OIDs and IP addresses in parameter values

v0.1.1 16 Feb 2015

* Added `pg.queries.longest` key
* Added `pg.setting` key
* Added `pg.query.*` keys
* Improved documentation

v0.1.0 16 Feb 2015

* Implemented `pg.query.*` and `pg.queries.longest` keys
* Implemented `pg.backends.*` keys
* Improved documentation

v0.1.0 7 Feb 2015

* Initial release